# chart-svg

./: .ghci  .gitignore  .hlint.yaml  .stan.toml  .travis.yml  ChangeLog.md  LICENSE  cabal.project  chart-svg.cabal  chart-svg.org  checklist.org  experiment.org  gallery.md  gallery.org  haskell-ci.config  hie.yaml  hud.html  hud.md  index.html  package.yaml  readme.md  readme.org  stack-profile.yaml  stack.yaml  weeder.dhall
.github/workflows/: haskell-ci.yml
app/: app.hs  examples.hs  gallery.hs  hud.lhs  reanimate-example.hs  startup.hs  style-page.hs  venn.hs
other/: bughack.html  candidatemj.html  correctmj.html  fo.html  fo1.html  mathjax-svg.js  mj2.html  mjbug1.html  mjbug2top.html  readme_.md
src/: Chart.hs
src/Chart/: Bar.hs  Chart.hs  ChartSvg.hs  Color.hs  Compound.hs  Core.hs  Data.hs  Diff.hs  ExampleNew.hs  Examples.hs  ExamplesNew.hs  FlatParse.hs  Format.hs  FormatN.hs  Hud.hs  Markup.hs  Page.hs  Pie.hs  Pixel.hs  Primitive.hs  Reanimate.hs  Render.hs  Spot.hs  Style.hs  Surface.hs  Svg.hs  Types.hs  Various.hs  Xml.hs
src/Chart/Backend/: Svg.hs
src/Chart/Data/: Time.hs
src/Chart/Markup/: Parser.hs
src/Chart/Svg/: Lucid.hs
src/Chart/Xml/: Parser.hs
src/Data/: Colour.hs  FormatN.hs  Path.hs
src/Data/Colour/: Mix.hs
src/Data/Path/: Parser.hs
test/: doctests.hs  test.hs
