cabal-version:  2.4
name:           chart-svg
version:        0.2.0
synopsis:       Charting library targetting SVGs.
description:
    This package provides a charting library targetting SVG as the rendered output.
    .
    == Usage
    .
    >>> import Chart
    >>>
    >>> let xs = [[(0.0, 1.0), (1.0, 1.0), (2.0, 5.0)], [(0.0, 0.0), (3.0, 3.0)], [(0.5, 4.0), (0.5, 0)]] :: [[(Double, Double)]]
    >>> let ls = fmap (PointXY . uncurry Point) <$> xs
    >>> let anns = zipWith (\w c -> LineA (LineStyle w c)) [0.015, 0.03, 0.01] palette1
    >>> let lineChart = zipWith Chart anns ls
    >>> writeChartSvgHud "other/lineshud.svg" lineChart
    .
    ![main example](other/lineshud.svg)
    .
    See "Chart" for a broad overview of concepts, and "Chart.Examples" for a variety of practical examples.

category:       project
homepage:       https://github.com/tonyday567/chart-svg#readme
bug-reports:    https://github.com/tonyday567/chart-svg/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files:
  other/*.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/chart-svg

library
  exposed-modules:
    Chart
    Chart.Bar
    Chart.Examples
    Chart.Surface
    Chart.Render
    Chart.Types
    Data.Colour
    Data.FormatN
    Data.Path
  hs-source-dirs:
    src
  build-depends:
    Color >= 0.1.4 && < 0.1.5,
    attoparsec >= 0.13 && < 0.14,
    base >=4.7 && <5,
    cubicbezier,
    foldl,
    generic-lens >= 1.2 && < 3.0,
    lens >= 4.0 && < 5,
    linear,
    lucid >= 2.9 && < 2.10,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.6 && < 0.7,
    reanimate-svg >= 0.13 && < 0.14,
    scientific >= 0.3 && < 0.4,
    tagsoup >= 0.14 && < 0.15,
    text >= 1.2 && < 1.3,
    time >= 1.9 && < 1.10,
    transformers >= 0.5 && < 0.6,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

executable venn
  main-is: venn.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    containers >= 0.6 && < 0.7,
    chart-svg,
    generic-lens >= 1.2 && < 3.0,
    lucid >= 2.9 && < 2.10,
    lens >= 4.0 && < 5,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.6 && < 0.7,
    text >= 1.2 && < 1.3,
    transformers >= 0.5 && < 0.6,
    unordered-containers >= 0.2.10 && < 0.3,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    doctest >= 0.16 && < 0.17,
    numhask >= 0.7 && < 0.8,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
