cabal-version:   2.4
name:            chart-svg
version:         0.3.0
synopsis:        Charting library targetting SVGs.
description:
  This package provides a charting library targetting SVG as the rendered output.
  .
  == Usage
  .
  >>> import Chart
  >>> :set -XOverloadedLabels
  >>>let xs = fmap (fmap (uncurry Point)) [[(0.0, 1.0), (1.0, 1.0), (2.0, 5.0)], [(0.0, 0.0), (3.2, 3.0)], [(0.5, 4.0), (0.5, 0)]] :: [[Point Double]]
  >>> let anns = zipWith (\w c -> LineA (LineStyle w (palette1 c) Nothing Nothing Nothing Nothing)) [0.015, 0.03, 0.01] [0..2]
  >>> let lineExample = mempty & (#chartList .~ zipWith Chart anns (fmap (fmap PointXY) xs)) & #hudOptions .~ defaultHudOptions & #svgOptions .~ defaultSvgOptions :: ChartSvg
  .
  > writeChartSvg "other/line.svg" lineExample
  .
  ![main example](docs/other/line.svg)
  .
  See "Chart" for a broad overview of concepts, and "Chart.Examples" for a variety of practical examples.

category:        charts
homepage:        https://github.com/tonyday567/chart-svg#readme
bug-reports:     https://github.com/tonyday567/chart-svg/issues
author:          Tony Day
maintainer:      tonyday567@gmail.com
copyright:       Tony Day (c) 2017
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files: other/*.svg
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.2.1
source-repository head
  type:     git
  location: https://github.com/tonyday567/chart-svg

library
  exposed-modules:
    Chart
    Chart.Primitive
    Chart.Data
    Chart.Style
    Chart.Hud
    Chart.Svg
    Chart.Bar
    Chart.Examples
    Chart.Surface
    Data.Colour
    Data.Colour.Mix
    Data.Path
    Data.Path.Parser

  hs-source-dirs:     src
  build-depends:
    , adjunctions           ^>= 4.4
    , attoparsec            >=0.13.2 && < 0.15
    , base                  >=4.7 && <5
    , Color                 ^>=0.3
    , containers            ^>=0.6
    , cubicbezier           ^>=0.6
    , foldl                 ^>=1.4
    , neat-interpolation    ^>=0.5.1
    , optics-core           ^>=0.4
    , lucid                 ^>=2.9
    , mtl                   ^>=2.2.2
    , numhask               ^>=0.10
    , numhask-array         ^>=0.9.2
    , numhask-space         ^>=0.9
    , random                ^>=1.2.1
    , scientific            ^>=0.3
    , tagsoup               ^>=0.14
    , text                  ^>=1.2
    , time                  ^>=1.9
    , transformers          ^>=0.5
    , unordered-containers  ^>=0.2
    , formatn               ^>=0.2

  default-language:   Haskell2010
  default-extensions: StrictData
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie
